--- a/app/views/members/edit.html.haml
+++ b/app/views/members/edit.html.haml
@@ -1,16 +1,12 @@
-%section#banner
-  .row
-    .large-12.columns
-      %h2 Update your details
-      .subheader Please make sure your details are always up to date.
-  .row
-    .large-12.columns
-      .avatar-container
-        =image_tag(current_user.avatar(75), alt: current_user.name)
-      %span
-        You can change your avatar at
-        =link_to('gravatar.com.', 'http://en.gravatar.com/')
-      %br
-      %br
-      = render partial: 'members/new', locals: { submit_text: "Save" }
-      %hr
+.row
+  .col
+    %h2 Update your details
+    %p Please make sure your details are always up to date.
+.row.mb-4
+  .col
+    .mb-4
+      =image_tag(current_user.avatar(75), alt: current_user.name)
+    %p
+      You can change your avatar at
+      =link_to('gravatar.com.', 'http://en.gravatar.com/')
+    = render partial: 'members/new', locals: { submit_text: "Save" }
