--- a/app/views/layouts/_aside.html.haml
+++ b/app/views/layouts/_aside.html.haml
@@ -22,6 +22,9 @@
   %li
     %hr.dropdown-divider
   %li
+    = link_to profile_path, class: "dropdown-item" do
+      My Profile
+  %li
     = link_to dashboard_path, class: "dropdown-item" do
       My Dashboard
   %li
