--- a/app/views/admin/events/_form.html.haml
+++ b/app/views/admin/events/_form.html.haml
@@ -27,6 +27,9 @@
   .row
     .large-12.columns
       = f.input :schedule
+  .row
+    .large-3.columns
+      = f.association :venue, input_html: { data: { placeholder: 'Select sponsors' }}, required: true
   = render partial: "sponsorships", locals: { f: f }
   .row
     .large-6.columns
