--- a/app/views/events/_sponsors.html.haml
+++ b/app/views/events/_sponsors.html.haml
@@ -1,10 +1,3 @@
 - sponsors.each do |sponsor|
-  %li
-    .row
-      .large-2.columns
-        = image_tag(sponsor.avatar.url, class: 'sponsor', alt: sponsor.name)
-      .large-10.columns
-        = link_to sponsor.name, sponsor.website
-        %p
-          = sponsor.description
-  %br
+  .large-3.columns.sponsor-image
+    = link_to image_tag(sponsor.avatar.url, class: "sponsor", alt: sponsor.name), sponsor.website
