Add skils section to member admin #show page
This section seemed to be missing and it will be quite useful having
it visible for better coach <-> student pairing.

--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -43,6 +43,8 @@
           %dt About
           %dd= @member.about_you
 
+          = render "shared/skills", member: @member
+
       .medium-4.columns
         - if @member.banned?
 
