Adds newsletter signup form to homepage

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -79,3 +79,6 @@
     .row
       .medium-offset-1.medium-10.columns
         = render partial: 'members/testimonials'
+
+%section.stripe.reverse
+  = render partial: 'shared/newsletter'
