Remove skills controller
- Coach data should only be available through /coaches, for the specified year and depending on attendances.

--- a/app/views/coach/_coach.html.haml
+++ b/app/views/coach/_coach.html.haml
@@ -21,7 +21,7 @@
                   %p
                     skills:
                     - coach.skills.each do |skill|
-                      = link_to skill.name, skill_url(skill.name), class: "skill"
+                      .label= skill.name
   .row
     .medium-6.columns.text-left
       = page_entries_info(@coaches, model: 'coaches')
