--- a/app/views/shared/_skills.html.haml
+++ b/app/views/shared/_skills.html.haml
@@ -2,4 +2,4 @@
   %dt Skills
   %dd
     - member.skills.each do |skill|
-      = link_to skill.name, skill_url(skill.name), class: "skill"
+      .label= skill.name
