Adds newsletter form description text
Explains what content to expect in the newsletter

--- a/app/views/shared/_newsletter.html.haml
+++ b/app/views/shared/_newsletter.html.haml
@@ -1,7 +1,7 @@
 .row
   .medium-10.medium-offset-1.columns
-    %h2 Subscribe to our newsletter
-    %p Summary of what's in the newsletter. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    %h2= t('homepage.newsletter.title')
+    %p= t('homepage.newsletter.description')
 
     -# Mailchimp Signup Form
     #mc_embed_signup
