Map to correct ban and resolve error
When no active ban is present the admin/member page falls over

--- a/app/views/admin/bans/_ban.html.haml
+++ b/app/views/admin/bans/_ban.html.haml
@@ -18,4 +18,4 @@
           %i.fa.fa-envelope-open.fa-stack-1x.info
         %div= action.explanation
     .date
-      = l(@member.bans.active.first.created_at, format: :website_format)
+      = l(action.created_at, format: :website_format)
