Display latest notes for a member
When looking through the admin list of students and coaches, this
commit will display a speech balloon icon if the user has new notes
from the past 5 workshops. When hovered, you’ll see a tooltip with
the content of these notes.

Fixes #1490

--- a/app/assets/stylesheets/partials/_member_note.scss
+++ b/app/assets/stylesheets/partials/_member_note.scss
@@ -1,11 +1,8 @@
 #note  {
-  margin-bottom: 1em;
-  padding-bottom: 1em;
-
-  border-bottom: 1px solid #ddd;
-
-  &:last-child {
-    border-bottom: none;
+  & + & {
+    margin-top: 1em;
+    padding-top: 1em;
+    border-top: 1px solid #ddd;
   }
 
   p {
