--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -23,6 +23,11 @@
               %span.has-tip{ 'data-tooltip': '', 'aria-haspopup': 'true', title: 'Multiple no shows and attendance warnings in the last six months' }
                 %i.fa.fa-exclamation-circle
 
+            - recent_notes = invitation.member.recent_notes
+            - if recent_notes.any?
+              %span.has-tip{ 'data-tooltip': '', 'aria-haspopup': 'true', title: render(partial: 'admin/members/member_note', collection: recent_notes) }
+                %i.fa.fa-comment
+
             = link_to admin_member_path(invitation.member) do
               - if invitation.member.full_name.blank?
                 = invitation.member.email
